add api for getting address info by employee_id in address_service

--- a/address_service/src/main/resources/application.properties
+++ b/address_service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=address_service
+
+server.port=8082
+server.servlet.context-path=/addresses
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/address_service_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
