configure discovery server, the Eureka Server

--- a/discovery_server/src/main/resources/application.properties
+++ b/discovery_server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=discovery_server
+
+server.port=8761
+# 8761 ==> The default port of Eureka Server
+# We can change this port number as we want
+
+eureka.client.fetch-registry=false
+# To say to my Eureka Server that there is no another Eureka Server in port 8761, so you should not fetch the registry from it
+
+eureka.client.register-with-eureka=false
+# To prevent my Eureka Server from registering itself inside itself ==> If We set it to true, We will find our Eureka server registered in our Eureka Server like any service
+
