add Actuators configuration for all microservices

--- a/address_service_instance2/src/main/resources/application.properties
+++ b/address_service_instance2/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.hibernate.ddl-auto=update
 #eureka.client.service-url.DEFAULT_ZONE=http://localhost:5000/eureka  ==> If we change the default port of the Eureka server
 
 eureka.instance.metadata-map.context-path=${server.servlet.context-path}
+
+management.endpoints.web.exposure.include=*
+
+#To prevent actuators/info from displaying 404 ==> You should add some info
+management.info.env.enabled=true
+
+info.app.name=address-service-instance2
+info.app.description=The second instance of address service
+info.app.version=4.0.2
