--- a/employee_service/src/main/resources/application.properties
+++ b/employee_service/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.profiles.active=rest-template-discovery-client
 # The Eureka clients know that the default post of the Eureka server is 8761, so they automatically connect to this port to register themselves inside it
 # So If we change the default port of the Eureka server, We must let all the Eureka clients know the new port
 #eureka.client.service-url.DEFAULT_ZONE=http://localhost:5000/eureka
+
+management.endpoints.web.exposure.include=*
+
+#To prevent actuators/info from displaying 404 ==> You should add some info
+management.info.env.enabled=true
+
+info.app.name=employee-service
+info.app.description=service to Manage employee data
+info.app.version=4.0.2
